# gigaanalysis

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: API.rst  conf.py  gigaanalysis.rst  index.rst  intro.rst  modules.rst
gigaanalysis/: __init__.py  const.py  contour.py  data.py  diglock.py  dset.py  fit.py  heatc.py  highfield.py  htsc.py  magnetism.py  mfunc.py  mfunc_fft.py  mfunc_make.py  mfunc_trans.py  mfunc_ufunc.py  parse.py  qo.py
gigaanalysis/other/: tdms.py
