[metadata]
name = gigaanalysis
version = attr: gigaanalysis.__version__
author = Alex Hickey
author_email = alexander.john.hickey@gmail.com
description = A toolbox for manipulating data that can be expressed as a 
    dependent and independent variable.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexeatscake/gigaanalysis
project_urls =
    Source Code = https://github.com/alexeatscake/gigaanalysis
keywords = magnets, SdH, dHvA, magnetic, quantum, oscillations,
    superconductor, quantum oscillations, EMFL, digital lock in
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    h5py

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme